--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
   <main class="advice container">
-    <p class="advice__id">Advice #117</p>
-    <h1 class="advice__description">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</h1>
+    <p id="adviceId" class="advice__id">Advice #117</p>
+    <h1 id="adviceDescription" class="advice__description">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</h1>
     <picture>
       <source media="(min-width: 768px)" srcset="./images/pattern-divider-desktop.svg">
       <img class="advice__image" src="./images/pattern-divider-mobile.svg" alt="Icon pattern-divider">
@@ -31,5 +31,7 @@
     <p class="attribution__text">Challenge by <a class="attribution__link" href="https://www.frontendmentor.io/challenges/advice-generator-app-QdUG-13db" target="_blank">Frontend Mentor</a>.</p>
     <p class="attribution__text">Coded by <a class="attribution__link" href="https://github.com/victorivanlopezlearning" target="_blank">Víctor Iván López</a>.</p>
   </footer>
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
