Add: spinner animation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
   <main class="advice container">
     <p id="adviceId" class="advice__id">Advice #117</p>
     <h1 id="adviceDescription" class="advice__description">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</h1>
+    <div id="spinner" class="spinner d-none">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
     <picture>
       <source media="(min-width: 768px)" srcset="./images/pattern-divider-desktop.svg">
       <img class="advice__image" src="./images/pattern-divider-mobile.svg" alt="Icon pattern-divider">
